force-app/main/default/objects/DM_Repayment_Schedule_Summary__c/DM_Repayment_Schedule_Summary__c.object-meta.xml
<CustomObject>
    <label>DM Repayment Schedule</label>
    <nameField>
        <label>DM Amortization Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DM Repayment Schedule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>