force-app/main/default/objects/DM_Repayment_Schedule_Summary__c/fields/DM_CL_Contract__c.field-meta.xml
<CustomField>
    <fullName>DM_CL_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DM CL Contract</label>
    <referenceTo>DM_Loan_Account__c</referenceTo>
    <relationshipLabel>DM Repayment Schedule</relationshipLabel>
    <relationshipName>DM_Repayment_Schedule_Summarys</relationshipName>
    <type>Lookup</type>
</CustomField>