force-app/main/default/objects/DM_Repayment_Schedule_Summary__c/fields/DM_Frequency__c.field-meta.xml
<CustomField>
    <fullName>DM_Frequency__c</fullName>
    <label>DM Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>DM_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>DM_Daily</fullName>
            </value>
            <value>
                <fullName>DM_Weekly</fullName>
            </value>
            <value>
                <fullName>DM_Bi-weekly</fullName>
            </value>
            <value>
                <fullName>DM_Semi-Monthly</fullName>
            </value>
            <value>
                <fullName>DM_Monthly</fullName>
            </value>
            <value>
                <fullName>DM_Bi-Monthly</fullName>
            </value>
            <value>
                <fullName>DM_Quarterly</fullName>
            </value>
            <value>
                <fullName>DM_Semi-Annual</fullName>
            </value>
            <value>
                <fullName>DM_Annual</fullName>
            </value>
            <value>
                <fullName>DM_Single-Payment</fullName>
            </value>
            <value>
                <fullName>DM_Semi-Monthly-PD</fullName>
            </value>
            <value>
                <fullName>DM_Billing Frequency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>