force-app/main/default/objects/DM_Repayment_Schedule_Summary__c/fields/DM_Loan_Disbursal_Transaction__c.field-meta.xml
<CustomField>
    <fullName>DM_Loan_Disbursal_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Repayment Schedule Record of which LDT</description>
    <inlineHelpText>This field is used only in case of FIT (Fund in Tranches) Loans. Every disbursal re-generates repayment schedule, this field keeps track of parent disbursal due to which record is created.</inlineHelpText>
    <label>DM Loan Disbursal Transaction</label>
    <referenceTo>DM_Loan_Disbursal_Transaction__c</referenceTo>
    <relationshipName>DM_Loan_Disbursal_Transaction</relationshipName>
    <type>Lookup</type>
</CustomField>