force-app/main/default/objects/DM_Repayment_Schedule_Summary__c/fields/DM_Other_Loan_Transaction__c.field-meta.xml
<CustomField>
    <fullName>DM_Other_Loan_Transaction__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>DM Other Loan Transaction</label>
    <referenceTo>loan__Other_Transaction__c</referenceTo>
    <relationshipLabel>Repayment Schedule</relationshipLabel>
    <relationshipName>Repayment_Schedule</relationshipName>
    <type>Lookup</type>
</CustomField>