force-app/main/default/objects/DM_Repayment_Schedule_Summary__c/fields/DM_RSS_Repayment_Amt__c.field-meta.xml
<CustomField>
    <fullName>DM_RSS_Repayment_Amt__c</fullName>
    <label>DM Repayment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>