force-app/main/default/objects/DM_Repayment_Schedule_Summary__c/fields/DM_RSS_Repayment_Dt__c.field-meta.xml
<CustomField>
    <fullName>DM_RSS_Repayment_Dt__c</fullName>
    <label>DM Repayment Date</label>
    <type>Date</type>
</CustomField>