force-app/main/default/objects/DM_Repayment_Schedule_Summary__c/fields/DM_RSS_Seq__c.field-meta.xml
<CustomField>
    <fullName>DM_RSS_Seq__c</fullName>
    <label>DM Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>