force-app/main/default/objects/DM_Repayment_Schedule_Summary__c/fields/DM_Type__c.field-meta.xml
<CustomField>
    <fullName>DM_Type__c</fullName>
    <label>DM Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DM_RECURRING</fullName>
            </value>
            <value>
                <fullName>DM_ONE TIME</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>